Авторизация, фикс логирования через Napier